--- a/release.properties
+++ b/release.properties
@@ -1,11 +1,22 @@
 #release configuration
-#Tue Dec 10 00:09:14 IST 2019
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
-pushChanges=true
-scm.url=scm\:git\:https\://github.com/SachinSharmaa/sachin-petclinic.git
-preparationGoals=clean verify
-projectVersionPolicyId=default
-remoteTagging=true
+#Tue Dec 10 00:10:55 IST 2019
 scm.commentPrefix=[maven-release-plugin] 
+project.dev.com.sachin\:pet-clinic-web=0.0.2-SNAPSHOT
+pushChanges=true
+scm.tag=pet-clinic-0.0.1
+project.scm.com.sachin\:pet-clinic.developerConnection=scm\:git\:https\://github.com/SachinSharmaa/sachin-petclinic.git
+remoteTagging=true
+projectVersionPolicyId=default
+project.dev.com.sachin\:pet-clinic-data=0.0.2-SNAPSHOT
+project.rel.com.sachin\:pet-clinic-web=0.0.1
+scm.url=scm\:git\:https\://github.com/SachinSharmaa/sachin-petclinic.git
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
+project.scm.com.sachin\:pet-clinic-data.empty=true
+project.rel.com.sachin\:pet-clinic=0.0.1
+preparationGoals=clean verify
+project.scm.com.sachin\:pet-clinic.tag=HEAD
 exec.snapshotReleasePluginAllowed=false
-completedPhase=check-poms
+project.rel.com.sachin\:pet-clinic-data=0.0.1
+project.scm.com.sachin\:pet-clinic-web.empty=true
+project.dev.com.sachin\:pet-clinic=0.0.2-SNAPSHOT
+completedPhase=generate-release-poms
