--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,6 @@
 	
 	<scm>
 		<developerConnection>scm:git:git@github.com:SachinSharmaa/sachin-petclinic.git</developerConnection>
-		<tag>pet-clinic-0.0.1</tag>
+		<tag>HEAD</tag>
 	</scm>
 </project>
