--- a/pet-clinic-data/pom.xml
+++ b/pet-clinic-data/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.sachin</groupId>
 		<artifactId>pet-clinic</artifactId>
-		<version>0.0.1</version>
+		<version>0.0.1.snapshot</version>
 	</parent>
 	<artifactId>pet-clinic-data</artifactId>
 	
