--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -14,7 +12,7 @@
 	<groupId>com.sachin</groupId>
 	<artifactId>pet-clinic</artifactId>
 
-	<version>0.0.1.snapshot</version>
+	<version>0.0.1</version>
 	<modules>
 		<module>pet-clinic-data</module>
 		<module>pet-clinic-web</module>
@@ -48,6 +46,6 @@
 	<scm>
 		<url>https://github.com/SachinSharmaa/sachin-petclinic.git</url>
         <connection>scm:git:https://github.com/SachinSharmaa/sachin-petclinic.git</connection>
-		<tag>HEAD</tag>
+		<tag>0.0.1</tag>
 	</scm>
 </project>
