--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.sachin</groupId>
 		<artifactId>pet-clinic</artifactId>
-		<version>0.0.1</version>
+		<version>0.0.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>pet-clinic-web</artifactId>
 	
@@ -13,7 +13,7 @@
 		<dependency>
 			<groupId>com.sachin</groupId>
 			<artifactId>pet-clinic-data</artifactId>
-			<version>0.0.1</version>
+			<version>0.0.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
