--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 				<artifactId>maven-release-plugin</artifactId>
 				<configuration>
 					<goals>install</goals>
-					<autoVersionSubModules>true</autoVersionSubModules>
+					<autoVersionSubmodules>true</autoVersionSubmodules>
 				</configuration>
 			</plugin>
 		</plugins>
